# yir7sem

./: .env.example  .gitignore  README.md  Taskfile.yml  docker-compose.yaml  go.mod  go.sum  go.work  go.work.sum  init-postgres.sh  merge_swagger_files.py  pyproject.toml  taskfile.yml
all/api/: medservice.proto
all/cmd/: main.go
api-gateway/: Taskfile.yml
api-gateway/cmd/: main.go
api-gateway/config/: config.yaml
api/ultrasound/: ultrasound.proto
auth/: .env-docker  .env.example  Dockerfile  README.md  Taskfile.yml  go.mod  go.sum  private.key  public.key  service.yml  taskfile.yml
auth/config/: config.yml
auth/docs/: tech.md
auth/tests/: README.md
card/: Taskfile.yml  go.mod  go.sum
card/cmd/: main.go
card/config/: config.yml
gateway/: .env-docker  .env.example  Dockerfile  README.md  Taskfile.yml  go.mod  go.sum  service.yml  taskfile.yml
gateway/cmd/: main.go  server.go
gateway/config/: config.yaml  config.yml
gateway/docs/: docs.go  swagger.json  swagger.yaml  tech.md
gateway/logs/: logs.txt
init-scripts/sql/: postgres.sql
kafka/: Taskfile.yml  events.proto
med/: .env-docker  .env.example  Dockerfile  README.md  Taskfile.yml  go.mod  go.sum  service.yml  taskfile.yml
medworkers/: Taskfile.yml
ml_service/: .env  .env-docker  Dockerfile  Makefile  README.md  Taskfile.yml  main.py  out.json  requirements.txt
pkg/: go.mod
s3upload/: README.md  Taskfile.yml
uzi/: .env-docker  .env.example  .gitignore  .golangci.yml  README.md  Taskfile.yml  go.mod  go.sum  service.yml  taskfile.yml
vendor.protogen/: README.md
(+589 files in other folders)
